Update JDK and resolve compiler errors.

--- a/pom.xml
+++ b/pom.xml
@@ -21,4 +21,11 @@
         </plugins>
     </build>
 
+    <dependencies>
+        <dependency>
+            <groupId>javax.xml.soap</groupId>
+            <artifactId>javax.xml.soap-api</artifactId>
+            <version>1.4.0</version>
+        </dependency>
+    </dependencies>
 </project>
